[tool.poetry]
name = "repl_python3_telegram-gustavo-bot"
version = "0.1.0"
description = ""
authors = ["jcardila <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
telebot = "^0.0.4"
pyTelegramBotAPI = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
